--- a/src/configurable/ui/LuaOptionsPanel.form
+++ b/src/configurable/ui/LuaOptionsPanel.form
@@ -26,7 +26,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Built-In LuaJ"/>
+              <text value="Built-In KahLua"/>
             </properties>
           </component>
           <component id="79da1" class="javax.swing.JRadioButton" binding="radioButtonLuaC">
