--- a/src/run/LuaCommonOptionsForm.form
+++ b/src/run/LuaCommonOptionsForm.form
@@ -35,12 +35,6 @@
           <text value="Lua interpreter:"/>
         </properties>
       </component>
-      <component id="43da4" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="luaInterpreterEdit">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
       <component id="94124" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="workingDirEdit">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -64,6 +58,30 @@
         <children>
           <component id="175a7" class="com.intellij.execution.configuration.EnvironmentVariablesComponent" binding="environmentVariablesEdit">
             <constraints border-constraint="Center"/>
+            <properties/>
+          </component>
+        </children>
+      </grid>
+      <grid id="7278a" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="ffb80" class="javax.swing.JCheckBox" binding="kahluaCheckBox" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Kahlua"/>
+            </properties>
+          </component>
+          <component id="43da4" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="luaInterpreterEdit">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
             <properties/>
           </component>
         </children>
