--- a/src/run/LuaCommonOptionsForm.form
+++ b/src/run/LuaCommonOptionsForm.form
@@ -62,7 +62,7 @@
           </component>
         </children>
       </grid>
-      <grid id="7278a" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="7278a" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -70,9 +70,9 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="ffb80" class="javax.swing.JCheckBox" binding="kahluaCheckBox" default-binding="true">
+          <component id="51235" class="javax.swing.JRadioButton" binding="kahluaRadioButton" default-binding="true">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Kahlua"/>
@@ -84,8 +84,30 @@
             </constraints>
             <properties/>
           </component>
+          <component id="f82c7" class="javax.swing.JRadioButton" binding="luajRadioButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Luaj"/>
+            </properties>
+          </component>
+          <component id="d88d1" class="javax.swing.JCheckBox" binding="javaVMCheckBox" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Java VM"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="javaSdks">
+      <member id="51235"/>
+      <member id="f82c7"/>
+    </group>
+  </buttonGroups>
 </form>
