--- a/src/run/LuaCommonOptionsForm.form
+++ b/src/run/LuaCommonOptionsForm.form
@@ -62,7 +62,7 @@
           </component>
         </children>
       </grid>
-      <grid id="7278a" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="7278a" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -70,34 +70,18 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="51235" class="javax.swing.JRadioButton" binding="kahluaRadioButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Kahlua"/>
-            </properties>
-          </component>
           <component id="43da4" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="luaInterpreterEdit">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
-          <component id="f82c7" class="javax.swing.JRadioButton" binding="luajRadioButton">
+          <component id="d88d1" class="javax.swing.JCheckBox" binding="useSDKCheckbox" default-binding="true">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Luaj"/>
-            </properties>
-          </component>
-          <component id="d88d1" class="javax.swing.JCheckBox" binding="javaVMCheckBox" default-binding="true">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Java VM"/>
+              <text value="Use Module SDK"/>
             </properties>
           </component>
         </children>
