--- a/src/options/LuaOptionsPanel.form
+++ b/src/options/LuaOptionsPanel.form
@@ -30,13 +30,13 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="785d4" class="javax.swing.JCheckBox" binding="resolveUpvaluedIdentifiersCheckBox" default-binding="true">
+          <component id="785d4" class="javax.swing.JCheckBox" binding="enableTypeInference" default-binding="true">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <enabled value="false"/>
-              <text value="Resolve Upvalued Identifiers"/>
+              <text value="Enable Type Inference"/>
             </properties>
           </component>
           <vspacer id="76962">
